[webcanvas][back] GameModelMapper GameRoom toModel 게임 방 입장자 리스트 toList -> collect()로 변경